added skills section

--- a/style.css
+++ b/style.css
@@ -365,7 +365,7 @@ header .navbar ul li a.active::before {
   left: 0;
   right: 0;
   margin: auto;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
 }
 
 .services .service-content .box:hover::before {
@@ -394,10 +394,81 @@ header .navbar ul li a.active::before {
   margin: 0;
 }
 
-.services .service-content .box p{
+.services .service-content .box p {
   font-size: 15px;
   font-weight: 400;
   line-height: 24px;
   color: #838383;
   margin: 10px 0 10px;
+}
+
+/* SKILSS */
+
+.skills {
+  padding: 100px 15px;
+  background-color: #ffffff;
+}
+
+.skills .skills-content {
+  flex: 0 0 50%;
+  max-width: 50%;
+  padding-right: 30px;
+}
+
+.skills .img {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.skills .img img {
+  width: 100%;
+  display: block;
+}
+
+.skills .skills-content .section-title p {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #838383;
+  margin: 15px 0 0;
+}
+
+.skills .skills-content .skill-box {
+  flex: 0 0 100%;
+  max-width: 100%;
+  margin-bottom: 30px;
+}
+
+.skills .skills-content .skill-box h6 {
+  font-size: 16px;
+  font-weight: 500;
+  color: #000000;
+  margin: 0 0 8px;
+}
+
+.skills .skills-content .skill-box .skill-bar {
+  height: 5px;
+  background-color: #eeeeee;
+  position: relative;
+}
+
+.skills .skills-content .skill-box .skill-bar .skill-bar-in {
+  background-color: #febd01;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+}
+
+.skills .skills-content .skill-box .skill-bar .skill-bar-in span {
+  color: #838383;
+  font-size: 16px;
+  font-weight: 400;
+  position: absolute;
+  right: 0;
+  top: -30px;
 }
