--- a/style.css
+++ b/style.css
@@ -694,3 +694,78 @@ header .navbar ul li a.active::before {
   background-color: #ffffff;
   color: #000000;
 }
+
+/*TESTIMONTIALS*/
+
+.testimonials {
+  padding: 100px 0;
+  background-color: #f5f8fd;
+}
+
+.testimonials .section-title h1::before {
+  left: 30%;
+}
+
+.testimonials .testimonials-content {
+  position: relative;
+  overflow: hidden;
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+
+.testimonials .testimonials-content .testi-slider {
+  float: left;
+  transition: margin 1s ease;
+}
+
+.testimonials .testimonials-content .testi-slider .slide {
+  background-color: #ffffff;
+  margin-bottom: 15px;
+  border: 1px solid #eeeeee;
+  padding: 40px 20px;
+  border-radius: 4px;
+  display: flex;
+  flex-wrap: nowrap;
+  float: left;
+  width: 100%;
+}
+.testimonials .testimonials-content .testi-slider .slide .img {
+  flex: 0 0 128px;
+  max-width: 128px;
+}
+
+.testimonials .testimonials-content .testi-slider .slide p {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #838383;
+  margin: 0;
+}
+
+.testimonials .testimonials-content .testi-slider .slide h6 {
+  font-size: 16px;
+  font-weight: 600;
+  color: #000000;
+  margin: 10px 0 5px;
+}
+
+.testimonials .testimonials-content .slider-controls {
+  float: left;
+  width: 100%;
+  text-align: center;
+}
+
+.testimonials .testimonials-content .slider-controls div {
+  height: 15px;
+  width: 15px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  border: 1px solid #febd01;
+  display: inline-block;
+  margin: 10px 6px;
+  cursor: pointer;
+}
+
+.testimonials .testimonials-content .slider-controls div.active {
+  background-color: #febd01;
+}
