--- a/style.css
+++ b/style.css
@@ -23,20 +23,20 @@ header {
   right: 0px;
   border-bottom: 1px solid #423940;
   padding: 0px 15px;
-  z-index: 10;
+  z-index: 11;
 }
 
 header.fixed {
   background-color: #ffffff;
   position: fixed;
   border-color: #eeeeee;
-  animation: fixedHeader .6s ease;
+  animation: fixedHeader 0.6s ease;
+  z-index: 11;
 }
 
 @keyframes fixedHeader {
   0% {
     transform: translateY(-100%);
-    opacity: 0;
   }
   100% {
     transform: translateY(0%);
@@ -373,7 +373,7 @@ header .navbar ul li a.active::before {
 
 .services {
   background-color: #f5f8fd;
-  padding: 100px 0px 70px;
+  padding: 100px 15px 70px;
 }
 
 .services .section-title h1:before {
@@ -1046,4 +1046,175 @@ footer .social a:hover {
   margin: 0;
   font-weight: 400;
   font-size: 15px;
+}
+
+.ham-burger .fa {
+  font-size: 20px;
+  height: 30px;
+  width: 35px;
+  background-color: #ffffff;
+  color: #000000;
+  border-radius: 3px;
+  line-height: 30px;
+  text-align: center;
+  cursor: pointer;
+  display: none;
+  border: 1px solid #eeeeee;
+}
+
+@media (max-width: 991px) {
+  .home .home-content .block h1 {
+    font-size: 50px;
+  }
+}
+
+@media (max-width: 786px) {
+  .home .home-content .block h1 {
+    font-size: 40px;
+  }
+
+  .home .home-content .block h3 {
+    font-size: 25px;
+  }
+
+  header {
+    padding: 15px;
+    position: fixed;
+    background-color: #ffffff;
+    border: none;
+    border-bottom: 1px solid #eeeeee;
+  }
+
+  header .brand-name a {
+    color: #000000;
+  }
+
+  .ham-burger .fa {
+    display: inline-block;
+  }
+
+  .navbar {
+    position: absolute;
+    background-color: #ffffff;
+    width: 100%;
+    left: 0%;
+    top: 60px;
+    padding: 15px;
+    border-top: 1px solid #eeeeee;
+    display: none;
+    border-bottom: 1px solid #eeeeee;
+  }
+
+  .navbar.show {
+    display: block;
+  }
+
+  header .navbar ul li {
+    display: block;
+    margin-left: 0;
+  }
+  header .navbar ul li a {
+    line-height: 42px;
+    color: #000000;
+  }
+
+  header .navbar ul li a::before {
+    background-color: #febd01;
+  }
+
+  .about-me .about-content .text {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding-left: 0px;
+    padding-top: 30px;
+  }
+
+  .about-me .about-content .img {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .services .service-content .box {
+    background-color: #ffffff;
+    padding: 30px;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .skills .skills-content {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding-right: 0px;
+  }
+  .skills .img {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .portfolio .portfolio-gallery .item {
+    flex: 0 0 50%;
+    max-width: 50%;
+    position: relative;
+    padding: 8px;
+  }
+  .message-text .text {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .message-text .button {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding-top: 20px;
+  }
+
+  .blogs .blogs-content .box {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .contact-us .contact-form {
+    padding: 40px 20px;
+  }
+
+  .contact-us .contact-form .col-6 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .home. .home-content .block h1 {
+    font-size: 30px;
+  }
+
+  .home .home-content .block h3 {
+    font-size: 20px;
+  }
+
+  .home .home-content .block {
+    padding-left: 20px;
+  }
+
+  .portfolio .portfolio-gallery .item {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .about-me .about-content .text .info .list p {
+    flex: 0 0 100%;
+  }
+
+  .testimonials .testimonials-content .testi-slider {
+    text-align: center;
+  }
+
+  .testimonials .testimonials-content .testi-slider .slide .img {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .testimonials .testimonials-content .testi-slider .slide {
+    flex-wrap: wrap;
+  }
+
 }
