--- a/style.css
+++ b/style.css
@@ -174,7 +174,8 @@ header .navbar ul li a.active::before {
 
 .home {
   min-height: 100vh;
-  background-image: url("images/hero/1.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("images/hero/1.jpg");
   background-size: cover;
   background-position: center;
   padding: 15px;
@@ -192,9 +193,15 @@ header .navbar ul li a.active::before {
   align-items: center;
 }
 
+.home-content iframe {
+  flex: 0 0 45%;
+  max-width: 45%;
+  margin-top: 50px;
+}
+
 .home .home-content .block {
-  flex: 0 0 75%;
-  max-width: 75%;
+  flex: 0 0 55%;
+  max-width: 55%;
   padding-left: 35px;
   border-left: 5px solid #ffffff;
   margin-top: 50px;
@@ -273,8 +280,6 @@ header .navbar ul li a.active::before {
 .about-me .about-content .img img {
   width: 100%;
   display: block;
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
 }
 
 .about-me .about-content .text {
@@ -1068,6 +1073,19 @@ footer .social a:hover {
   }
 }
 
+@media (max-width: 900px) {
+  .home-content iframe {
+    flex: 0 0 80%;
+    max-width: 80%;
+    margin: auto;
+  }
+
+  .home .home-content .block {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
 @media (max-width: 786px) {
   .home .home-content .block h1 {
     font-size: 40px;
@@ -1216,5 +1234,4 @@ footer .social a:hover {
   .testimonials .testimonials-content .testi-slider .slide {
     flex-wrap: wrap;
   }
-
 }
